<resources>
    <string name="app_name">Sri Paras</string>
    <string name="login_signin">Log in/Sign in</string>
    <string name="edit_login">Phone No.</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="remember_me">Remember me</string>
    <string name="fgt_pwd">Forgot Password?</string>
    <string name="available_balance">Available Balance</string>
    <string name="amount_hint">₹ 0.00</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="transaction">Transactions</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="support">Support</string>
    <string name="chng_pwd">Change Password</string>
    <string name="logout">Logout</string>
    <string name="enter_mobile">Enter Phone no.</string>
    <string name="enter_password">Please enter password</string>
    <string name="cancel">Cancel</string>
    <string name="enter_otp">Enter otp sent to your mobile no.</string>
    <string name="otp">Enter otp</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="verify">Verify</string>
    <string name="go_back">Go back to Login</string>
    <string name="mobile_recharge">Mobile Recharge</string>
    <string name="fastag">Fastag</string>
    <string name="money_transfer">Money Transfer</string>
    <string name="aeps">Aeps</string>
    <string name="hint_country_code">+91</string>
    <string name="enter_ten_mob">Enter 10 digit mobile no.</string>
    <string name="next">Next</string>
    <string name="go_previous">Go Back</string>
    <string name="no_beneficiary">No Beneficiary!</string>
    <string name="add_benef">Add Beneficiary</string>
    <string name="enter_address">Enter Address</string>
    <string name="enter_city">Enter City</string>
    <string name="enter_district">Enter District</string>
    <string name="enter_state">Enter State</string>
    <string name="enter_pincode">Pincode</string>
    <string name="enter_account">Enter Account</string>
    <string name="enter_bank">Enter Bank Name</string>
    <string name="enter_correct_bank">Enter valid bank</string>
    <string name="continu">Continue</string>
    <string name="wallet_id">Wallet Id</string>
    <string name="enter_fastag_id">Enter Wallet Id</string>
    <string name="close">Close</string>
    <string name="enter_amount_recharge">(₹) Enter amount to recharge</string>
    <string name="enter_amount">Enter Amount (₹)</string>
    <string name="name">Name</string>
    <string name="mob_num">Mobile Number</string>
    <string name="recharge">Recharge</string>
    <string name="no_internet">No Internet Connectivity!</string>
    <string name="do_have_referral">Do you have referral code?</string>
    <string name="sign_up">Sign up now.</string>
    <string name="user_full_name">Enter Full Name</string>
    <string name="country_code">+91</string>
    <string name="user_phone_no">Phone No.</string>
    <string name="user_email_id">Email Id</string>
    <string name="conf_pwd">Confirm Password</string>
    <string name="terms_and_cond">I Read and agree to Terms and Conditions</string>
    <string name="aleardy_account">Already have a account?</string>
    <string name="enter_pan">PAN No.</string>
    <string name="enter_aadhaar">Enter Aadhaar No.</string>
    <string name="enter_company">Enter Company</string>
    <string name="enter_referral_code">Enter Referral Code</string>
    <string name="enter_dob">Enter DOB</string>
    <string name="share">Share</string>
    <string name="select_state">Select State</string>
    <string name="no_transaction">No Transaction</string>
    <string name="date">Search Date(DD/MM/YYYY)</string>
    <string name="select_date">Select Date</string>
    <string name="remitter_not_found">Remitter Not Found! Please verify and add as new Remitter.</string>
    <string name="remitter_not_found_msg">Remitter not found! Enter detail below to register new remitter.</string>
    <string name="account_number">Account Number</string>
    <string name="enter_ifsc">Enter IFSC</string>
    <string name="ifsc_no">IFSC No.</string>
    <string name="enter_bene_name">Enter Beneficiary Name</string>
    <string name="delete">Delete</string>
    <string name="select_type">Select Trasnfer Type</string>
    <string name="imps">IMPS</string>
    <string name="neft">NEFT</string>
    <string name="enter_amount_hint">Enter amount (₹)</string>
    <string name="dmt">DMT</string>
    <string name="enter_mob">Enter Sender Mobile Number</string>
    <string name="enter_name">Enter Sender name</string>
    <string name="add_new_benef">Add New Beneficiary</string>
    <string name="transfer">Transfer</string>
    <string name="pay">PAY</string>
    <string name="cancel_btn">Cancel</string>
    <string name="enter_remitter_name">Enter Remitter Name</string>
</resources>
