<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    app:contentPadding="@dimen/_5sdp"
    app:cardElevation="@dimen/_25sdp"
    app:cardCornerRadius="@dimen/_15sdp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:src="@drawable/sriparas_logo" />

            <TextView
                android:id="@+id/dialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_type"
                android:textSize="@dimen/_12ssp"
                android:paddingLeft="@dimen/_5sdp"
                android:paddingRight="@dimen/_5sdp"
                android:textColor="@color/gray"/>

            <RadioGroup
                android:id="@+id/rg_type"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:weightSum="1"
                android:layout_margin="@dimen/_5sdp"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/radio_imps"
                    android:layout_width="match_parent"
                    android:layout_weight="0.50"
                    android:text="@string/imps"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/_14ssp"
                    android:textStyle="bold"
                    android:layout_height="match_parent" />

                <RadioButton
                    android:id="@+id/radio_neft"
                    android:layout_width="match_parent"
                    android:layout_weight="0.50"
                    android:text="@string/neft"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/_14ssp"
                    android:layout_height="match_parent" />

            </RadioGroup>

            <TextView
                android:id="@+id/txt_acc"
                android:textSize="@dimen/_14ssp"
                android:textColor="@color/text_gray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold"
                android:text="@string/app_name"
                android:textAppearance="?android:attr/textAppearanceLarge"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_amount"
                android:textSize="@dimen/_13ssp"
                android:layout_marginTop="@dimen/_15sdp"/>

            <EditText
                android:id="@+id/edittext_amount_view"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginTop="@dimen/_4sdp"
                android:background="@drawable/box_background"
                android:hint="@string/enter_amount_hint"
                android:textColorHint="@color/white"
                android:paddingLeft="@dimen/_8sdp"
                android:paddingRight="@dimen/_8sdp"
                android:textColor="@color/white"
                android:textSize="@dimen/_14ssp"
                android:inputType="number"
                android:digits=".0123456789"
                tools:ignore="Autofill" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginBottom="@dimen/_6sdp"
                android:weightSum="1">

                <TextView
                    android:id="@+id/txt_cancel"
                    android:layout_width="match_parent"
                    android:layout_weight="0.60"
                    android:layout_height="@dimen/_35sdp"
                    android:gravity="center"
                    android:background="@color/colorGray"
                    android:text="@string/cancel"
                    android:textColor="@color/green"
                    android:textSize="@dimen/_14ssp"
                    android:layout_gravity="center" />

                <Button
                    android:id="@+id/btn_send"
                    android:layout_width="match_parent"
                    android:layout_weight="0.40"
                    android:layout_height="@dimen/_35sdp"
                    android:background="@color/green"
                    android:text="@string/pay"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textAllCaps="false"
                    android:textSize="@dimen/_14ssp"/>

            </LinearLayout>

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progress_money"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_80sdp"
            android:padding="@dimen/_8sdp"
            android:background="@color/colorGray"
            android:layout_centerVertical="true"
            android:visibility="invisible"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>


</androidx.cardview.widget.CardView>