<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:paddingTop="@dimen/_8sdp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp">

        <RelativeLayout
            android:id="@+id/rl_image_show"
            android:layout_width="@dimen/_35sdp"
            android:layout_centerVertical="true"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/img_navigation_view"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:background="@drawable/rl_back"
                android:src="@drawable/menu"
                android:layout_centerVertical="true"
                android:padding="@dimen/_8sdp"
                android:visibility="visible"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/img_back_main"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:src="@drawable/arrow_back"
                android:background="@drawable/rl_back"
                android:layout_centerVertical="true"
                android:padding="@dimen/_8sdp"
                android:visibility="gone"/>

        </RelativeLayout>

        <TextView
            android:id="@+id/txt_phone_user"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/rl_image_show"
            android:singleLine="true"
            android:layout_marginRight="@dimen/_35sdp"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textStyle="normal"
            android:textSize="@dimen/_14ssp"
            android:visibility="visible"
            tools:ignore="RtlSymmetry"
            android:layout_toRightOf="@+id/rl_image_show"
            android:layout_marginEnd="@dimen/_35sdp" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/balance_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/_10sdp"
        android:visibility="visible">

        <TextView
            android:id="@+id/text_current_balance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/available_balance"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="@dimen/_14ssp" />

        <TextView
            android:id="@+id/txt_wallet_balance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/amount_hint"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="@dimen/_16ssp" />

    </LinearLayout>

</LinearLayout>
